修复停止时调用微信登出接口。 增加控制台生成二维码的方法和配置

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,6 +2,10 @@
 verstion: 0.1
 #是否启用数据库(暂时未实现)
 useMysql: false
+#是否启用二维码web服务
+#如果你的控制台二维码混乱无法查看，可以启用这个选项扫码
+#控制台二维码混乱可以尝试调整控制台大小
+enableQrSever: false;
 #数据库配置
 mysql:
   ip: 127.0.0.1
